# meeting-scribe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
docs/: DISCORD_SETUP.md  GOOGLE_MEET.md  RECORDER.md  RECORDING.md  ROADMAP.md
src/: ai.py  bot.py  config.py  extract_audio.py  meet_bot.py  notify.py  process.py  settings.py  store.py  transcribe.py  web.py
src/templates/: ask.html  base.html  index.html  meet.html  meeting.html  recorder.html  search.html  settings.html
tests/: test_ai.py  test_config.py  test_extract_audio.py  test_main.py  test_meet.py  test_notify.py  test_settings.py  test_store.py  test_transcribe.py  test_web.py
